# neith

./: '  .clang-format  .gdbinit  .gitignore  3  BuildAndDebug.sh  BuildAndRun.sh  BuildAndTest.sh  CMakeLists.txt  README.md  ]  build.bat  imgui.ini  index.html  run.sh
assets/: cubeMap.frag  cubeMap.vert  default.frag  default.vert  grid.frag  grid.vert  light.frag  light.vert  line.frag  line.vert  lod.comp  screen.frag  screen.vert  shader.frag  shader.vert  shadowMap.frag  shadowMap.vert
assets/models/: Grass.gltf  Intergalactic1.gltf  RuinedCityGame.gltf  RuinedCitySkyRise01.gltf  RuinedCitySkyRise02.gltf  RuinedCitySkyRise03.gltf  RuinedCitySkyRise04.gltf  Tree.gltf  Tree1.gltf  cube.gltf  plane.gltf  testScene.gltf  testSceneMat.gltf  testmodel.gltf
src/: CMakeLists.txt  camera.h  dataStructures.c  dataStructures.cpp  dataStructures.h  debug.cpp  debug.h  debugInfo.cpp  debugInfo.h  defaults.h  log.cpp  log.h  main.c  material.h  mesh.h  meshloader.h  neith.c  neith.cpp  neith.h  scene.h  staticrenderer.h  textures.h  time.c  time.cpp  time.h  timer.cpp  timer.h  transform.h  vecmath.c  vecmath.cpp  vecmath.h
src/exceptions/: windowCreationException.h
src/gui/: gui.cpp  gui.h
src/physics/: colliders.cpp  colliders.h  collision.c  collision.cpp  collision.h  physics.cpp  physics.h
src/procedural/: openSimplex.cpp  openSimplex.h  openSimplex2F.cpp  openSimplex2F.h  voronoi.cpp  voronoi.h
src/render/: framebuffer.c  framebuffer.cpp  framebuffer.h  instancerenderer.cpp  instancerenderer.h  linerenderer.cpp  linerenderer.h  render.c  render.cpp  render.h  shaders.c  shaders.cpp  shaders.h  staticrenderer.c  staticrenderer.cpp  staticrenderer.h  textures.cpp  textures.h
src/scene/: camera.c  camera.cpp  camera.h  ecsmanager.cpp  ecsmanager.h  entity.cpp  entity.h  material.c  material.cpp  material.h  materialnew.cpp  materialnew.h  mesh.c  mesh.cpp  mesh.h  meshloader.c  meshloader.cpp  meshloader.h  model.cpp  model.h  rendercontext.cpp  rendercontext.h  save.cpp  save.h  scene.c  scene.cpp  scene.h  skybox.c  skybox.cpp  skybox.h
src/scene/components/: cameraComp.cpp  cameraComp.h  compManager.cpp  compManager.h  component.cpp  component.h  meshComp.cpp  meshComp.h  newMeshComp.h  transformComp.cpp  transformComp.h
src/scene/systems/: sysCamera.cpp  sysCamera.h  sysMaterial.cpp  sysMaterial.h  sysMesh.cpp  sysMesh.h  sysPhysics.cpp  sysPhysics.h  sysTransform.cpp  sysTransform.h
src/window/: input.c  input.cpp  input.h  window.c  window.cpp  window.h
testapp/src/: CMakeLists.txt  camera.cpp  camera.h  main.c  main.cpp  perf.h
tests/: CMakeLists.txt
tests/cu/: CMakeLists.txt
tests/src/: CMakeLists.txt  collisionTest.h  maintest.c
